# project-securer-rust

./: .gitignore  LICENCE  README.md  SECURITY.md
app/: package-lock.json  package.json  tsconfig.json  webpack.config.js
app/public/: app.html
app/src/: app.tsx
app/src/components/: login.tsx  vault-handler.ts
tauri/: Cargo.toml  dump  tauri.conf.json
tauri/src/: main.rs  modules.rs
tauri/src/modules/: aes.rs  mod.rs  vault.rs
tauri/src/modules/aes/: utils.rs
tauri/src/modules/aes/key/: mod.rs  utils.rs
tauri/src/modules/aes/utils/: binary.rs  rcon.rs  s_box.rs
tauri/src/modules/logger/: mod.rs
tauri/src/modules/vault/: mod.rs
tauri/tests/: aes.rs
