[package]
name = "project-securer"
version = "0.1.0"
description = ""
authors = ["NightFoxDev"]
license = "MPL-2.0"
license-file = "../LICENSE"
repository = ""
default-run = "project-securer"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["fs-read-file", "fs-write-file"] }
rust-crypto = "0.2.36"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
